version/2.1/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`2.1.0 <https://github.com/ansys/scade-guitools/releases/tag/v2.1.0>`_ - May 22, 2025
=====================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - feat: Allow overriding default values when adding a control to a page
          - `#21 <https://github.com/ansys/scade-guitools/pull/21>`_

        * - feat: Add a mode to  FileSelector control for browsing directories
          - `#23 <https://github.com/ansys/scade-guitools/pull/23>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - fix: Do not resize check buttons
          - `#19 <https://github.com/ansys/scade-guitools/pull/19>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - build(deps): Bump the dependencies group with 3 updates
          - `#8 <https://github.com/ansys/scade-guitools/pull/8>`_

        * - build(deps): Bump the dependencies group with 2 updates
          - `#10 <https://github.com/ansys/scade-guitools/pull/10>`_

        * - build(deps): Bump nbsphinx from 0.9.6 to 0.9.7 in the dependencies group across 1 directory
          - `#13 <https://github.com/ansys/scade-guitools/pull/13>`_

        * - build(deps): Update flit-core requirement from <3.11,>=3.2 to >=3.2,<3.13 in the dependencies group
          - `#16 <https://github.com/ansys/scade-guitools/pull/16>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore: update CHANGELOG for v2.0.0
          - `#7 <https://github.com/ansys/scade-guitools/pull/7>`_

        * - docs: Fix example
          - `#9 <https://github.com/ansys/scade-guitools/pull/9>`_

        * - chore: Enable Python 3.12 and greater
          - `#12 <https://github.com/ansys/scade-guitools/pull/12>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - ci: Fix release steps
          - `#14 <https://github.com/ansys/scade-guitools/pull/14>`_

        * - ci: Bump ansys/actions from 8 to 9 in the actions group
          - `#15 <https://github.com/ansys/scade-guitools/pull/15>`_

        * - ci: Add permissions for release action
          - `#17 <https://github.com/ansys/scade-guitools/pull/17>`_


`2.0.0 <https://github.com/ansys/scade-guitools/releases/tag/v2.0.0>`_ - 2025-01-13
===================================================================================

Added
^^^^^

- feat: Initialize the repository `#1 <https://github.com/ansys/scade-guitools/pull/1>`_
- feat: Migration to GitHub `#3 <https://github.com/ansys/scade-guitools/pull/3>`_
- feat: Add RadioBox, GroupRadioBox and StaticRadioBox controls `#6 <https://github.com/ansys/scade-guitools/pull/6>`_


Dependencies
^^^^^^^^^^^^

- build(deps): Bump the dependencies group with 2 updates `#2 <https://github.com/ansys/scade-guitools/pull/2>`_, `#4 <https://github.com/ansys/scade-guitools/pull/4>`_


Documentation
^^^^^^^^^^^^^

- docs: Review `#5 <https://github.com/ansys/scade-guitools/pull/5>`_

.. vale on
